--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -9,7 +9,7 @@ Older houses.&ensp;Ours was kind of strange.&ensp;It had a rather large kitchen 
 as though the architect had imagined a dining table at the end, with a door leading to the back yard
 and a bathroom near that door.&ensp;Everything in relentless yellow.&ensp;
 <br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
-keeping my roommate's pot plants company.&ensp;I was convinced they were cross-odorizing each other.&ensp;
+keeping my housemate's pot plants company.&ensp;I was convinced they were cross-odorizing each other.&ensp;
 The Bird smelled like indica and the bud tasted faintly of 10W-40 and tires.&ensp;
 <br/>&emsp;The house next door was the mirror layout of ours, so the driveways ran adjacent.&ensp;That house had
 been on the market and recently bought by a smarmy Armenian guy who promptly replaced the front lawn with 
@@ -88,8 +88,8 @@ she unclasped them and put them on my thighs.&ensp;
 <br/>&emsp;I drove through downtown Willow Glen thinking about a coffee shop but it was too close.&ensp;So I headed for
 Los Gatos.&ensp;She was leaning correctly in turns.&ensp;Curving onto the highway ramp I said, "Hold on!"&ensp;
 I felt her grip tighten.&ensp;I gave her what, in my experience, women seem to want from a motorcycle ride.&ensp;
-We merged onto the highway at ninety, I checked mirror and over my shoulder, caught a glimpse of her smiling,
-and merged left to the fast lane, slowing a bit.&ensp;It was then that I remembered having had to switch the
+We merged at ninety, I checked mirror and over my shoulder, caught a glimpse of her smiling,
+and shifted left to the fast lane, slowing a bit.&ensp;It was then that I remembered having had to switch the
 bike to its reserve tank on my way home which meant we'd left with a little over a half gallon of fuel.&ensp;
 We were halfway through that, but Los Gatos wasn't far.&ensp;We'd make it, but would have to stop.&ensp;
 So we did, at the Chevron, my preferred brand.&ensp;Expensive, but had tested best for burning cleanly.&ensp;
@@ -182,30 +182,30 @@ While waiting for the green, I said:  "The seat belt is old school."&ensp;
 <br/>&emsp;While she figured out it was a non-retracting affair that needed some fiddling to get straight she said:
 "All the gear . . ."&ensp;
 <br/>&emsp;I confirmed:  "Every time.&ensp;Oh, and roll up your window."&ensp;
-<br/>&emsp;I heard the buckle click, and the light went green.&ensp;
+<br/>&emsp;I heard the buckle click, and the light changed.&ensp;
 <br/>&emsp;It had taken me a while to figure out that I'm really more interested in cornering than straight line speed.&ensp;
 It had then taken some experimenting, wider wheels, various tires, sway bars, adjustable shocks, to get
 the big car to do what I wanted.&ensp;Labors of love are forever works in progress.&ensp;
-Passions are just one kind of trap we pay to get into, stay in.&ensp;
+Passions are a kind of trap we pay to get into, stay in.&ensp;Or some crap.&ensp;Drop the clutch.&ensp;
 <br/>&emsp;"Uhhhh!"&ensp;
 <br/>&emsp;It was impressive, especially in first gear, the sudden snarl, the car leaping both forward and sideways.&ensp;
 I preferred to initiate first-time passengers with a left-hand turn to push them against their door 
-instead of toward me.&ensp;Only one had feared defenestration and grabbed at my shirtsleeve in panic.&ensp;
-<br/>&emsp;I powered on the stereo.&ensp;Boston.&ensp;More Than A Feeling.&ensp;
+instead of toward me.&ensp;One, fearing defenestration, had tried to grab my arm.&ensp;
+<br/>&emsp;I powered on the stereo.&ensp;Boston, "More Than A Feeling."&ensp;
 <br/>&emsp;"Jesus," she said.&ensp;"Do that again."&ensp;
 <br/>&emsp;I took a detour to let her experience the only twisty spot in the neighborhood, Dry Creek Road.&ensp;
 I considered it my testing area.&ensp;
-Later tha city installed traffic lights along there.&ensp;Closest I'd get to a statue.&ensp;
+Later the city installed traffic lights along there.&ensp;Closest I'd get to a statue.&ensp;
 <br/>&emsp;The route to the theater had us on El Camino Real.&ensp;Three lanes wide each way, center turn lane,
-and breakout turn lanes at each intersection.&ensp;It wasn't a Friday or Saturday night but the Firebird still 
+and breakout right-turn lanes at each intersection.&ensp;It wasn't a Friday or Saturday night but the Firebird still 
 attracted a friendly challenger at the first red light.&ensp;Vroom, vroom.&ensp;But here she surprised me.&ensp;
 <br/>&emsp;"Don't, okay?"&ensp;
 <br/>&emsp;I looked at her.&ensp;"You see a cop?"&ensp;
 <br/>&emsp;"No, and I really don't want to."&ensp;
 <br/>&emsp;I turned to the guy on my left.&ensp;"Not tonight, man.&ensp;The lady isn't into it."&ensp;
-<br/>&emsp;He leaned over his wheel to have a look, then laughed the laugh of the understanding unemcumbered.&ensp;
+<br/>&emsp;He leaned over his wheel of his GTO to have a look, then laughed the laugh of the unemcumbered.&ensp;
 We waited through the long cycle, admiring each others' noises.&ensp;
-<br/>&emsp;She was watching the cros-traffic light and when it went yellow she put her hand over mine as if to 
+<br/>&emsp;She was watching the cross-traffic and when it slowed she put her hand over mine as if to 
 help or prevent me shifting.&ensp;A picture is worth a thousand words, but a first direct touch 
 holds only a handful of possibilities.&ensp;Sort them any way you like.&ensp;
 <br/>&emsp;On green the guy next to us tore eff.&ensp;It's hard to judge from a docile perspective, 
@@ -213,7 +213,7 @@ couldn't say if I'd've bested him.&ensp;But maybe I already had.&ensp;
 <br/>&emsp;At the cineplex she was definitely my friend now.&ensp;Holding my hand in the ticket line and the popcorn line.&ensp;
 We watched something while a different movie played in my head.&ensp;Our hands kept meeting in the paper bucket
 like friendly dogs at a park.&ensp;
-<br/>&emsp;After the show she hit the ladies', but like before was out in record time.&ensp;
+<br/>&emsp;After the show she hit the ladies' and like before was out in record time.&ensp;
 <br/>&emsp;"So," I said.&ensp;
 <br/>&emsp;"So."&ensp;She took my hand and we walked out to my car.&ensp;My inner movie had come up with too many
 dialog options for me to choose from.&ensp;
@@ -247,12 +247,12 @@ and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 She looked younger, except for the smile.&ensp;It weighed at least ten years, perhaps a thousand.&ensp;
 It stayed on.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
-<br/>&emsp;Out my window I saw the coach got into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
+<br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
 <br/>&emsp;Beverly was sitting on the edge of the mattress reading my journal.&ensp;It was a large sketch pad 
 because I didn't like my private thoughts to be ruled.&ensp;i used a blue Fountain Pentel for it's 
 flexible tip.&ensp;Occasionally, a letter stroke would release tension and with it a delicate spray of ink.&ensp;
 <br/>&emsp;"You have nice penmanship."&ensp;
-<br/>&emsp;"So do you."&ensp;Silly, but mhy intent came across.&ensp;
+<br/>&emsp;"So do you."&ensp;Silly, but my intent came across.&ensp;
 <br/>&emsp;She closed my journal.&ensp;
 <br/>&emsp;At a nearby breakfast joint, as our plates arrived, she asked:  "So you can take the day off?"&ensp;
 <br/>&emsp;I'd called my office from the place's payphone.&ensp;"Nothing's on fire."&ensp;
@@ -273,11 +273,11 @@ but today wanted to hit the Wharf and buy some big towels.&ensp;
 <br/>&emsp;She laughted.&ensp;"You don't have all the gear?"&ensp;
 <br/>&emsp;"I did."&ensp;I told her the story of my necklace, a silver rope holding a rough piece of abalone shell.&ensp;
 I'd seen the bit of shell in the water the last time I'd been.&ensp;It was magically prismatic and tumbling
-around my ankles in the surf.&ensp;It was so elusive I hadn't noticed the sneaker way approaching that hit me
+around my ankles in the surf.&ensp;It was so elusive I hadn't noticed the sneaker wave that hit me
 waist-high, knocked me over, and stole my towel, a shoe and my sandwich.&ensp;But when I got up, the
 bit of shell had been in my hand.&ensp;
 <br/>&emsp;Lunch on the wharf made shopping easy.&ensp;I bought her sunglasses and a big hat.&ensp;At the car, I put the
-new towels in the salt-encrusted nylon duffel that the wave hadn't quite taken, I think because it had
+new towels in the salt-encrusted nylon duffel that the wave hadn't quite taken, likely because it had
 been weighted down by a nearly new bottle of sunscreen.&ensp;
 <br/>&emsp;I drove north along the coast, noting turnouts where the cliff had been cut nearly to the road by
 hydrodynamics and time.&ensp;At one with no cars I pulled across the southbound lane and parked.&ensp;
@@ -289,8 +289,8 @@ We picked our way down the cliff to the tiny beach.&ensp;I spread the new towels
 Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged rock wall.&ensp;
 <br/>&emsp;Sitting on her towel under her big hat she reamarked:  "White caps."&ensp;
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
-<br/>&emsp;She turned.&ensp;"Here."&ensp;She rolled on to her knees while pulling one leg from her panties and putting it
-across me.&ensp;Then she arched her back to unclip her top and it slid down her arms on to my neck.&ensp;
+<br/>&emsp;She turned.&ensp;"Here."&ensp;She rolled onto her knees while pulling one leg from her panties and putting it
+across me.&ensp;Then she arched her back to unclip her top and let it slide down her arms.&ensp;
 I was warmer.&ensp;It felt like a fashion shoot.&ensp;She kept the hat and shades,
 <br/>&emsp;We climbed the cliff and reached the top right as another car parked behind mine.&ensp;We said hi as 
 they got out and we got in.&ensp;
@@ -306,8 +306,9 @@ else to be, or perhaps go.&ensp;
 If I'd been hearing any lines til now, this one sounded the most over-thought:  "Nah.&ensp;I travel light."&ensp;
 <br/>&emsp;It begged other questions while implying they'd be best unasked.&ensp;
 <br/>&emsp;That was part of this.&ensp;
-<br/>&emsp;Another part presented itself almost immediately.&ensp;I heard the Fastback and the Civic pull into
+<br/>&emsp;Another part presented itself almost immediately.&ensp;I heard the Civic and the Fastback pull into
 the back yard, like they were returning from somewhere together.&ensp;That didn't make much sense.&ensp;
+the back yard, like they'd ssssssssdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddonvenbb were returning from somewhere together.&ensp;That didn't make much sense.&ensp;
 Had to be a coincidence.&ensp;Or something.&ensp;
 <br/>&emsp;The back door opened as I was bringing a couple of Cokes from the fridge.&ensp;Beverly and I had been 
 watching MTV with the cats.&ensp;
