--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -307,9 +307,8 @@ If I'd been hearing any lines til now, this one sounded the most over-thought:  
 <br/>&emsp;It begged other questions while implying they'd be best unasked.&ensp;
 <br/>&emsp;That was part of this.&ensp;
 <br/>&emsp;Another part presented itself almost immediately.&ensp;I heard the Civic and the Fastback pull into
-the back yard, like they were returning from somewhere together.&ensp;That didn't make much sense.&ensp;
-the back yard, like they'd ssssssssdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddonvenbb were returning from somewhere together.&ensp;That didn't make much sense.&ensp;
-Had to be a coincidence.&ensp;Or something.&ensp;
+down the driveway and the back yard, one behind the other.&ensp;Coincidence.&ensp;
+Or maybe they'd met after work somewhere.&ensp;I wondered what for.&ensp;
 <br/>&emsp;The back door opened as I was bringing a couple of Cokes from the fridge.&ensp;Beverly and I had been 
 watching MTV with the cats.&ensp;
 <br/>&emsp;"Hey," the coach said, to me, "can you take a look at this car thing?"&ensp;To her he said,
