--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -306,11 +306,10 @@ else to be, or perhaps go.&ensp;
 If I'd been hearing any lines til now, this one sounded the most over-thought:  "Nah.&ensp;I travel light."&ensp;
 <br/>&emsp;It begged other questions while implying they'd be best unasked.&ensp;
 <br/>&emsp;That was part of this.&ensp;
-<br/>&emsp;Another part presented itself almost immediately.&ensp;I heard the Civic and the Fastback pull into
-down the driveway and the back yard, one behind the other.&ensp;Coincidence.&ensp;
-Or maybe they'd met after work somewhere.&ensp;I wondered what for.&ensp;
-<br/>&emsp;The back door opened as I was bringing a couple of Cokes from the fridge.&ensp;Beverly and I had been 
-watching MTV with the cats.&ensp;
+<br/>&emsp;Another part presented itself almost immediately.&ensp;
+I was grabbing a couple of Cokes from the fridge and saw the Civic and the Fastback go past the window
+toward the back.&ensp;Coincidence.&ensp;Or maybe they'd met after work somewhere.&ensp;I wondered what for.&ensp;
+<br/>&emsp;The back door opened as I hadnded Beverly a can.&ensp;We'd been watching MTV with the cats.&ensp;
 <br/>&emsp;"Hey," the coach said, to me, "can you take a look at this car thing?"&ensp;To her he said,
 "Shouldn't take long."&ensp;No tone, the dude was cool.&ensp;But.&ensp;
 <br/>&emsp;Outside, it was clear there was no car thing.&ensp;
@@ -356,6 +355,7 @@ If you aren't having fun, no one can,  But as I turned the knob, on another leve
 <br/>&emsp;She powered off the TV and moved the cats.&ensp;They were sharing her lap.&ensp;Wise guys.&ensp;
 <br/>&emsp;She and I climbed into the back of the Fastback.&ensp;There was a hole in the vinyl seat about the size of a
 dollar bill revealing the horizontal wavy seat springs, one of which had a missing section.&ensp;
+Beneath the springs was a piece of plywood.&ensp;
 <br/>&emsp;I told her:  "Ask our driver how that hole came to be."&ensp;
 <br/>&emsp;She peered at him in the mirror as he backed down the driveway.&ensp;
 <br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and my ex were, uh--"&ensp;
@@ -367,7 +367,7 @@ with two people's weight, it was enough to . . ."&ensp;He was smirking and snork
 We were wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
 springs a quick look and asked:  "Anybody get branded?"&ensp;
 <br/>&emsp;I'd never thought to ask.&ensp;
-<br/>&emsp;Mr. Fastback turned pink.&ensp;
+<br/>&emsp;Mr. Fastback turned pink as Bev's bikini.&ensp;
 <br/>&emsp;We were seated in a booth, were holding menus, and crying so hard we could hardly order.&ensp;
 <p/>
 <br/>&emsp;
