--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -78,7 +78,7 @@ over the seat but I stopped her with a hand on her shoulder.&ensp;Another touch,
 "Driver first."&ensp;I got on, flicked the kickstand and said, "Okay."&ensp;
 <br/>&emsp;She put her foot on the peg and her hands on my shoulders and swung herself aboard.&ensp;The rear suspension
 sagged with the extra weight but only an inch.&ensp;I tended toward stiff settings.&ensp;I started the bike just
-as my housemate pulled into the drive in his ancient VS Fastback.&ensp;He stopped.&ensp;I waved and she did too.&ensp;
+as my housemate pulled into the drive in his ancient VW Fastback.&ensp;He stopped.&ensp;I waved and she did too.&ensp;
 Then I drove between a couple of bunches of the pink flowers, across the Armenian's new concrete, checked
 over my shoulder, and eased the bike onto Curtner.&ensp;We were only three houses from the light and it was 
 red.&ensp;"Lean into corners with mee," I said over my shoulder.&ensp;
@@ -163,7 +163,7 @@ not matching the car's blue interor, a long, obviously owner-fabricated, flat su
 <br/>&emsp;"Me neither."&ensp;She pulled out the lighter and manipulated it with great familiarity.&ensp;
 "Well, not for a while now."&ensp;
 <br/>&emsp;I reached across to the glove box and pulled out a plastic film canister given to me by someone
-who owned a camera.&ensp;Inside was some dewiccated bud and a half-finished joint.&ensp;I brushed the flakes from it
+who owned a camera.&ensp;Inside was some desiccated bud and a half-finished joint.&ensp;I brushed the flakes from it
 and handed it to her.&ensp;
 <br/>&emsp;"You roll this?" she asked, sparking the lighter.&ensp;
 <br/>&emsp;"Yep," I answered, wondering.&ensp;
@@ -176,8 +176,8 @@ Then she eased back against the headrest, holding the joint my way.&ensp;"I like
 <br/>&emsp;"Ah," I said.&ensp;"Me neither.&ensp;Taste like paper."&ensp;I snuffed and stowed the J and put the car in gear,
 easing down the drive.&ensp;Through the kitchen window I saw the coach had just filled a glass with water.&ensp;
 He raised it.&ensp;I flashed him a vee.&ensp;
-<br/>&emsp;To avoid sccraping the nose of the Firebird on the street I'd learned the magic angle to ease out.&ensp;
-The light was only a couple of houses down and I let the car ride its idle into the left turn lane.&ensp;
+<br/>&emsp;To avoid scraping the nose of the Firebird on the street I'd learned the magic angle to ease out.&ensp;
+The light was only a few houses down and I let the car ride its idle into the left turn lane.&ensp;
 While waiting for the green, I said:  "The seat belt is old school."&ensp;
 <br/>&emsp;While she figured out it was a non-retracting affair that needed some fiddling to get straight she said:
 "All the gear . . ."&ensp;
