--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -40,7 +40,7 @@ I had a spare leather jacket and gloves.&ensp;I had a helmet that would fit her,
 find a helmet that didn't smell like perfume.&ensp;My last pillion jockey was a real spritzer.&ensp;
 <br/>&emsp;She leapt the flowers and loped down the Armenian's driveway in her flip flops.&ensp;I heard his back door 
 open and close.&ensp;I pushed the bike to the front walk to make way in case either of my housemates came home.&ensp;
-My helmet collectin was in the garage.&ensp;I didn't want this woman to see the potted plants so I quickly 
+My helmet collection was in the garage.&ensp;I didn't want this woman to see the potted plants so I quickly 
 hauled open the big door and pushed my Firebird out.&ensp;A lot of noise and wear and tear starting a cold motor,
 and in those days I enjoyed pushing it, on flat ground anyway.&ensp;I had this idea that it somehow kept
 me honest or appreciative or something.&ensp;Then I went into the garage and closed the big door behind me.&ensp;
