--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -116,7 +116,7 @@ he enabled the pump.&ensp;I filled the tank, and closed the cap.&ensp;"Be one se
 <br/>&emsp;Horns.&ensp;"Like what?"&ensp;
 <br/>&emsp;I pointed to a place down the street.&ensp;"Oysters Rockefeller."&ensp;
 <br/>&emsp;I spun us over there, parked and we got seats at the bar.&ensp;
-<br/>&emsp;She was trepidatious when they arrived, but they were very pretty, lovely shells on a bed or rock salt,
+<br/>&emsp;Their arrival raised an eyebrow, but they were very pretty, lovely shells on a bed or rock salt,
 and when she saw me eat one she quickly followed suit.&ensp;Her expression was like watching a kaleidoscope
 that settled on fascination with what had happened in her mouth.&ensp;I ordered a glass of dry riesling
 for her.&ensp;
@@ -131,7 +131,7 @@ maybe intended for a dining room table.&ensp;Four heads turned when we came in.&
 <br/>&emsp;"Hey," I said to them, and opened my bedroom door.&ensp;
 <br/>&emsp;She waved.&ensp;Fred gave her the slow blink.&ensp;She hadn't even fed him anything.&ensp;Mr. Fastback was the pot
 grower and he just looked.&ensp;Mr. Civic, a water polo coach who had California written all over him,
-gave us a shaka smile.&ensp;He seemed to share Fred's opinion.&ensp;
+gave us a shaka sign.&ensp;He seemed to share Fred's opinion.&ensp;
 <br/>&emsp;In my bedroom I tossed my helmet and jacket and gloves on the mattresses, noting her duffel there.&ensp;
 I helped her again undo the D-ring strap closure on the helmet.&ensp;
 <br/>&emsp;"Need a bathroom break?"&ensp;It had been a few hours.&ensp;
@@ -151,7 +151,7 @@ She assessed what the dome light revealed and got in.&ensp;
 <br/>&emsp;"Ooh."&ensp;
 <br/>&emsp;"I'll let it warm up a bit," I said.&ensp;The dome was off but I turned it back on.&ensp;
 <br/>&emsp;She was casually reclined and looking at me.&ensp;Between us was a prototype center console I had 
-cobbled from a large piece of smooth-sided rather stuff foam I'd found glued to the inside of a 
+cobbled from a large piece of smooth-sided rather stiff foam I'd found glued to the inside of a 
 large cardboard box that had contained a very heavy piece of equipment delivered to a company
 sharing the parking lot where I worked.&ensp;It covered the transmission hump of the Firebird.&ensp;It was white,
 not matching the car's blue interor, a long, obviously owner-fabricated, flat surface.&ensp;
@@ -160,8 +160,7 @@ not matching the car's blue interor, a long, obviously owner-fabricated, flat su
 <br/>&emsp;Her hand immediately found the Bic in it's slot at the front of the foam block.&ensp;
 <br/>&emsp;"You smoke?"&ensp;
 <br/>&emsp;"Not cigarettes."&ensp;
-<br/>&emsp;"Me neither."&ensp;She pulled out the lighter and manipulated it with great familiarity.&ensp;
-"Well, not for a while now."&ensp;
+<br/>&emsp;"Me neither."&ensp;She manipulated the lighter with great familiarity.&ensp;"Well, not for a while now."&ensp;
 <br/>&emsp;I reached across to the glove box and pulled out a plastic film canister given to me by someone
 who owned a camera.&ensp;Inside was some desiccated bud and a half-finished joint.&ensp;I brushed the flakes from it
 and handed it to her.&ensp;
@@ -182,15 +181,15 @@ While waiting for the green, I said:  "The seat belt is old school."&ensp;
 <br/>&emsp;While she figured out it was a non-retracting affair that needed some fiddling to get straight she said:
 "All the gear . . ."&ensp;
 <br/>&emsp;I confirmed:  "Every time.&ensp;Oh, and roll up your window."&ensp;
-<br/>&emsp;I heard the buckle click, and the light changed.&ensp;
+<br/>&emsp;I heard the buckle click.&ensp;Her window went up.&ensp;The light changed.&ensp;
 <br/>&emsp;It had taken me a while to figure out that I'm really more interested in cornering than straight line speed.&ensp;
 It had then taken some experimenting, wider wheels, various tires, sway bars, adjustable shocks, to get
 the big car to do what I wanted.&ensp;Labors of love are forever works in progress.&ensp;
 Passions are a kind of trap we pay to get into, stay in.&ensp;Or some crap.&ensp;Drop the clutch.&ensp;
-<br/>&emsp;"Uhhhh!"&ensp;
+<br/>&emsp;"Unhhhh!"&ensp;
 <br/>&emsp;It was impressive, especially in first gear, the sudden snarl, the car leaping both forward and sideways.&ensp;
 I preferred to initiate first-time passengers with a left-hand turn to push them against their door 
-instead of toward me.&ensp;One, fearing defenestration, had tried to grab my arm.&ensp;
+instead of toward me.&ensp;Though one, fearing defenestration, had tried to grab my arm.&ensp;
 <br/>&emsp;I powered on the stereo.&ensp;Boston, "More Than A Feeling."&ensp;
 <br/>&emsp;"Jesus," she said.&ensp;"Do that again."&ensp;
 <br/>&emsp;I took a detour to let her experience the only twisty spot in the neighborhood, Dry Creek Road.&ensp;
@@ -208,7 +207,7 @@ We waited through the long cycle, admiring each others' noises.&ensp;
 <br/>&emsp;She was watching the cross-traffic and when it slowed she put her hand over mine as if to 
 help or prevent me shifting.&ensp;A picture is worth a thousand words, but a first direct touch 
 holds only a handful of possibilities.&ensp;Sort them any way you like.&ensp;
-<br/>&emsp;On green the guy next to us tore eff.&ensp;It's hard to judge from a docile perspective, 
+<br/>&emsp;On green the guy next to us tore off.&ensp;It's hard to judge from a docile perspective, 
 couldn't say if I'd've bested him.&ensp;But maybe I already had.&ensp;
 <br/>&emsp;At the cineplex she was definitely my friend now.&ensp;Holding my hand in the ticket line and the popcorn line.&ensp;
 We watched something while a different movie played in my head.&ensp;Our hands kept meeting in the paper bucket
@@ -249,7 +248,7 @@ It stayed on.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
 <br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
 <br/>&emsp;Beverly was sitting on the edge of the mattress reading my journal.&ensp;It was a large sketch pad 
-because I didn't like my private thoughts to be ruled.&ensp;i used a blue Fountain Pentel for it's 
+because I didn't like my private thoughts to be ruled.&ensp;I used a blue Fountain Pentel for it's 
 flexible tip.&ensp;Occasionally, a letter stroke would release tension and with it a delicate spray of ink.&ensp;
 <br/>&emsp;"You have nice penmanship."&ensp;
 <br/>&emsp;"So do you."&ensp;Silly, but my intent came across.&ensp;
@@ -274,10 +273,10 @@ but today wanted to hit the Wharf and buy some big towels.&ensp;
 <br/>&emsp;"I did."&ensp;I told her the story of my necklace, a silver rope holding a rough piece of abalone shell.&ensp;
 I'd seen the bit of shell in the water the last time I'd been.&ensp;It was magically prismatic and tumbling
 around my ankles in the surf.&ensp;It was so elusive I hadn't noticed the sneaker wave that hit me
-waist-high, knocked me over, and stole my towel, a shoe and my sandwich.&ensp;But when I got up, the
+waist-high, knocked me over, and stole my towel, a shoe and my sandwich.&ensp;But when I sat up, the
 bit of shell had been in my hand.&ensp;
 <br/>&emsp;Lunch on the wharf made shopping easy.&ensp;I bought her sunglasses and a big hat.&ensp;At the car, I put the
-new towels in the salt-encrusted nylon duffel that the wave hadn't quite taken, likely because it had
+new towels in the salt-encrusted gym bag that the wave hadn't quite taken, likely because it had
 been weighted down by a nearly new bottle of sunscreen.&ensp;
 <br/>&emsp;I drove north along the coast, noting turnouts where the cliff had been cut nearly to the road by
 hydrodynamics and time.&ensp;At one with no cars I pulled across the southbound lane and parked.&ensp;
@@ -295,7 +294,7 @@ I was warmer.&ensp;It felt like a fashion shoot.&ensp;She kept the hat and shade
 <br/>&emsp;We climbed the cliff and reached the top right as another car parked behind mine.&ensp;We said hi as 
 they got out and we got in.&ensp;
 <br/>&emsp;"Ooh," she said, "ahh," squirming on the passenger seat.&ensp;I was glad I'd put sheepskin covers over the vinyl.&ensp;
-Completely changes the sun-warmed car experience.&ensp;
+Completely changes the sun-baked car experience.&ensp;
 <br/>&emsp;I stopped at the taqueria on the edge of town.&ensp;I broke my policy and got a Corona with my carne asada plate,
 but only drank half.&ensp;She finished hers and fell asleep on the drive home.&ensp;
 <br/>&emsp;And home it apparently was now.&ensp;And I didn't know what to do about that.&ensp;It had never happened
