--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -238,7 +238,7 @@ helmets and gloves from the mattresses.&ensp;There was her duffel.&ensp;
 <br/>&emsp;"Huh."&ensp;
 <br/>&emsp;"Can I take off my shoes?"&ensp;
 <br/>&emsp;"Sure."&ensp;
-<br/>&emsp;She sat on the mattress, undid her laces, remvoed her shoes, stood, and slid out of her shirt and pants,
+<br/>&emsp;She sat on the mattress, undid her laces, removed her shoes, stood, and slid out of her shirt and pants,
 and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 <br/>&emsp;"Want to take yours off?" she asked.&ensp;This woman had octaves.&ensp;
 <br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;Standing.&ensp;Socks are spoilers.&ensp;
