--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -268,7 +268,7 @@ Dancing around in a bikini watering flowers.&ensp;
 I held the joint and thought about it, then took a fatalistic hit.&ensp;I'd find out.&ensp;
 <br/>&emsp;Because it was a weekday the traffic into Santa Cruz was light.&ensp;I told her that I usually
 skipped past Santa Cruz to head north to a couple of secluded beaches my housemates had shown me,
-but today wanted to hit the Wharf and buy some big towels.&ensp;
+but today wanted to hit the wharf and buy some big towels.&ensp;
 <br/>&emsp;She laughted.&ensp;"You don't have all the gear?"&ensp;
 <br/>&emsp;"I did."&ensp;I told her the story of my necklace, a silver rope holding a rough piece of abalone shell.&ensp;
 I'd seen the bit of shell in the water the last time I'd been.&ensp;It was magically prismatic and tumbling
@@ -298,7 +298,7 @@ Completely changes the sun-baked car experience.&ensp;
 <br/>&emsp;I stopped at the taqueria on the edge of town.&ensp;I broke my policy and got a Corona with my carne asada plate,
 but only drank half.&ensp;She finished hers and fell asleep on the drive home.&ensp;
 <br/>&emsp;And home it apparently was now.&ensp;And I didn't know what to do about that.&ensp;It had never happened
-with me and my housemates before.&ensp;Dating, sleepovers, sure, but it was clear that Beverly had no where
+with me and my housemates before.&ensp;Dating, sleepovers, sure, but it was plain that Beverly had no where
 else to be, or perhaps go.&ensp;
 <br/>&emsp;"Do we need to pick up any stuff from anywhere?"&ensp;
 <br/>&emsp;She looked at me as if she'd known this polite question had to have been a red flag on my horizon.&ensp;
@@ -345,11 +345,11 @@ give a bad vibe or . . ."&ensp;
 <br/>&emsp;"Let's go to the burger place," said the coach.&ensp;"I could go for their Chili Size."&ensp;
 <br/>&emsp;Mr. Fastback was parked best.&ensp;"You driving?" I asked him.&ensp;
 <br/>&emsp;He nodded, seeming disappointed his freak-out was being short-circuited so soon.&ensp;As for the coach,
-I don't think he had any real concerns.&ensp;He didn't really own anything worth stealing.&ensp;How much can you 
+I don't think he had any real worries.&ensp;He didn't really own anything worth stealing.&ensp;How much can you 
 get for a second-hand Speedo?&ensp;
 <br/>&emsp;As I turned back toward the house I found myself wondering how they even knew she'd spent the night.&ensp;
 Then I remembered her giggling at the cats.&ensp;And some other noises.&ensp;Jealous, Mr. Fastback.&ensp;
-If you aren't having fun, no one can,  But as I turned the knob, on another level I felt my own concerns.&ensp;
+If you aren't having fun, no one can,  But as I turned the knob, on another level, yep, driving into fog.&ensp;
 <br/>&emsp;"Hey," I said to Beverly, "we're heading out for burgers."&ensp;
 <br/>&emsp;She powered off the TV and moved the cats.&ensp;They were sharing her lap.&ensp;Wise guys.&ensp;
 <br/>&emsp;She and I climbed into the back of the Fastback.&ensp;There was a hole in the vinyl seat about the size of a
