--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -88,8 +88,12 @@ she unclasped them and put them on my thighs.&ensp;
 <br/>&emsp;I drove through downtown Willow Glen thinking about a coffee shop but it was too close.&ensp;So I headed for
 Los Gatos.&ensp;She was leaning correctly in turns.&ensp;Curving onto the highway ramp I said, "Hold on!"&ensp;
 I felt her grip tighten.&ensp;I gave her what, in my experience, women seem to want from a motorcycle ride.&ensp;
-We merged at ninety, I checked mirror and over my shoulder, caught a glimpse of her smiling,
-and shifted left to the fast lane, slowing a bit.&ensp;It was then that I remembered having had to switch the
+We merged at ninety, a limit set by 
+thrill-me-but-don't-kill-me, a syndrome originating in infants' memories of
+being tossed in the air by their fathers, something I'd never seen a mother do, undoubtably due to 
+a greater, and accurate, perception of investment.&ensp;
+I checked mirror and over my shoulder, caught a glimpse of her smiling,
+and shifted left to the fast lane.&ensp;I slowed a bit as I recalled having had to switch the
 bike to its reserve tank on my way home which meant we'd left with a little over a half gallon of fuel.&ensp;
 We were halfway through that, but Los Gatos wasn't far.&ensp;We'd make it, but would have to stop.&ensp;
 So we did, at the Chevron, my preferred brand.&ensp;Expensive, but had tested best for burning cleanly.&ensp;
