--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -246,14 +246,15 @@ helmets and gloves from the mattresses.&ensp;There was her duffel.&ensp;
 and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 <br/>&emsp;"Want to take yours off?" she asked.&ensp;This woman had octaves.&ensp;
 <br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;Standing.&ensp;Socks are spoilers.&ensp;
-<br/>&emsp;She turned in front of me like a ballerina on a music box.&ensp;No scars, ink or body hair.&ensp;
+<br/>&emsp;She crossed her ankles and turned in front of me like a ballerina on a music box.&ensp;
+No butt ink or body hair.&ensp;Ungilt and polished.&ensp;
 She looked younger, except for the smile.&ensp;It weighed at least ten years, perhaps a thousand.&ensp;
 It stayed on.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
 <br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
 <br/>&emsp;Beverly was sitting on the edge of the mattress reading my journal.&ensp;It was a large sketch pad 
-because I didn't like my private thoughts to be ruled.&ensp;I used a blue Fountain Pentel for it's 
-flexible tip.&ensp;Occasionally, a letter stroke would release tension and with it a delicate spray of ink.&ensp;
+because I didn't like my private thoughts to be ruled.&ensp;I used a Fountain Pentel for it's 
+flexible tip.&ensp;Occasionally, a letter stroke would release tension and with it a delicate spray of blue.&ensp;
 <br/>&emsp;"You have nice penmanship."&ensp;
 <br/>&emsp;"So do you."&ensp;Silly, but my intent came across.&ensp;
 <br/>&emsp;She closed my journal.&ensp;
