--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -89,7 +89,7 @@ she unclasped them and put them on my thighs.&ensp;
 Los Gatos.&ensp;She was leaning correctly in turns.&ensp;Curving onto the highway ramp I said, "Hold on!"&ensp;
 I felt her grip tighten.&ensp;I gave her what, in my experience, women seem to want from a motorcycle ride.&ensp;
 We merged at ninety, a limit set by 
-thrill-me-but-don't-kill-me, a syndrome originating in infants' memories of
+<i>thrill-me-but-don't-kill-me</i>, a syndrome originating in infants' memories of
 being tossed in the air by their fathers, something I'd never seen a mother do, undoubtably due to 
 a greater, and accurate, perception of investment.&ensp;
 I checked mirror and over my shoulder, caught a glimpse of her smiling,
