--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -81,7 +81,7 @@ sagged with the extra weight but only an inch.&ensp;I tended toward stiff settin
 as my housemate pulled into the drive in his ancient VW Fastback.&ensp;He stopped.&ensp;I waved and she did too.&ensp;
 Then I drove between a couple of bunches of the pink flowers, across the Armenian's new concrete, checked
 over my shoulder, and eased the bike onto Curtner.&ensp;We were only three houses from the light and it was 
-red.&ensp;"Lean into corners with mee," I said over my shoulder.&ensp;
+red.&ensp;"Lean into corners with me," I said over my shoulder.&ensp;
 <br/>&emsp;"Okay."&ensp;Her arms were already, instincctively, around my waist, hands clasped.&ensp;While waiting for green,
 she unclasped them and put them on my thighs.&ensp;
 <br/>&emsp;I saw the light for cross traffic go yellow and said, "Okay."&ensp;She clasped her hands again.&ensp;
