--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -82,8 +82,8 @@ as my housemate pulled into the drive in his ancient VW Fastback.&ensp;He stoppe
 Then I drove between a couple of bunches of the pink flowers, across the Armenian's new concrete, checked
 over my shoulder, and eased the bike onto Curtner.&ensp;We were only three houses from the light and it was 
 red.&ensp;"Lean into corners with me," I said over my shoulder.&ensp;
-<br/>&emsp;"Okay."&ensp;Her arms were already, instincctively, around my waist, hands clasped.&ensp;While waiting for green,
-she unclasped them and put them on my thighs.&ensp;
+<br/>&emsp;"Okay."&ensp;Her arms were already around my waist, hands clasped.&ensp;While waiting for green,
+she unclasped them and put her palms on my thighs.&ensp;
 <br/>&emsp;I saw the light for cross traffic go yellow and said, "Okay."&ensp;She clasped her hands again.&ensp;
 <br/>&emsp;I drove through downtown Willow Glen thinking about a coffee shop but it was too close.&ensp;So I headed for
 Los Gatos.&ensp;She was leaning correctly in turns.&ensp;Curving onto the highway ramp I said, "Hold on!"&ensp;
@@ -208,7 +208,7 @@ attracted a friendly challenger at the first red light.&ensp;Vroom, vroom.&ensp;
 <br/>&emsp;I turned to the guy on my left.&ensp;"Not tonight, man.&ensp;The lady isn't into it."&ensp;
 <br/>&emsp;He leaned over his wheel of his GTO to have a look, then laughed the laugh of the unemcumbered.&ensp;
 We waited through the long cycle, admiring each others' noises.&ensp;
-<br/>&emsp;She was watching the cross-traffic and when it slowed she put her hand over mine as if to 
+<br/>&emsp;She was watching the cross traffic and when it slowed she put her hand over mine as if to 
 help or prevent me shifting.&ensp;A picture is worth a thousand words, but a first direct touch 
 holds only a handful of possibilities.&ensp;Sort them any way you like.&ensp;
 <br/>&emsp;On green the guy next to us tore off.&ensp;It's hard to judge from a docile perspective, 
