--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -65,7 +65,7 @@ the closet and turned to hand it to her.&ensp;
 <br/>&emsp;But she was looking down.&ensp;"Hi, Fred," she said.&ensp;I realized I liked her voice.&ensp;
 <br/>&emsp;"Fred," I said, "shoo."&ensp;He did a lithe feline uey.&ensp;
 <br/>&emsp;I held out the jacket and she put it on.&ensp;The sleeves were long so I folded them back.&ensp;Then I handed
-her a pair of gloves which she made to pull on.&ensp;
+her a pair of gloves.&ensp;She pulled one on.&ensp;
 <br/>&emsp;"Uh," I said, "helmet first."&ensp;This was not a woman accustomed to the procedure.&ensp;Unless your gloves
 fit perfectly it's impossible to do up a helmet strap.&ensp;It became obvious the strap buckle was a 
 new thing too.&ensp;I'd given her the helmet that I guessed would fit best, and like many people, she had
