--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -91,7 +91,7 @@ I felt her grip tighten.&ensp;I gave her what, in my experience, women seem to w
 We merged at ninety, a limit set by 
 <i>thrill-me-but-don't-kill-me</i>, a syndrome originating in infants' memories of
 being tossed in the air by their fathers, something I'd never seen a mother do, undoubtably due to 
-a greater, and accurate, perception of investment.&ensp;
+greater investment.&ensp;
 I checked mirror and over my shoulder, caught a glimpse of her smiling,
 and shifted left to the fast lane.&ensp;I slowed a bit as I recalled having had to switch the
 bike to its reserve tank on my way home which meant we'd left with a little over a half gallon of fuel.&ensp;
